# RDOC-SACompanion

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build-companion.yml
apps/companion/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/companion-core/: Cargo.toml
apps/companion-core/src/: audio.rs  lib.rs  main.rs  mesh.rs  selfcheck.rs  serverless.rs  signaling.rs
apps/companion/src/: App.tsx  style.css
apps/companion/src-tauri/: Cargo.toml  tauri.conf.json
apps/companion/src-tauri/capabilities/: default.json
apps/companion/src-tauri/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
deploy/: .env.example  README.md  docker-compose.proxy.yml  docker-compose.yml  pull-installer.sh  turnserver.conf
docs/: ARCHITECTURE.md
server/init/: Cargo.toml  Dockerfile
server/init/src/: auth.rs  i18n.rs  main.rs  sessions.rs  tls.rs  turn.rs
spikes/audio-roundtrip/: Cargo.toml
spikes/audio-roundtrip/src/: main.rs
spikes/track-fanout/: Cargo.toml
spikes/track-fanout/src/: main.rs
