[package]
name = "companion-core"
version = "0.1.0"
edition.workspace = true

# Headless 2-peer (→ N-peer) mesh client: cpal+opus audio over webrtc-rs P2P,
# per-peer DataChannel chat, signaling to InitConnection. UI comes later.

[[bin]]
name = "companion-core"
path = "src/main.rs"

[dependencies]
protocol = { path = "../../crates/protocol" }
webrtc = "0.11"
audiopus = "0.2"
cpal = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
serde_json = "1"
bytes = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
