[package]
name = "init-connection"
version = "0.1.0"
edition.workspace = true

# InitConnection — WebSocket signaling server. Relays SDP/ICE, keeps the
# in-memory roster, enforces room-auth + cap, mints ephemeral TURN creds.
# No media ever passes through here.

[[bin]]
name = "init-connection"
path = "src/main.rs"

[dependencies]
protocol = { path = "../../crates/protocol" }
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.8"
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"
anyhow = "1"
