[package]
name = "rdoc-squadlink-lite"
version = "0.1.16"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
companion-core = { path = "../../companion-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
# Raw global input (keyboard + mouse buttons) for the configurable PTT key.
rdev = "0.5"
